# algorithms-and-data-structures

./: .gitignore  CMakeLists.txt
list01/: CMakeLists.txt
list01/doc/: list1.tex
list01/src/: lib.rs  list1.cpp
list02/: CMakeLists.txt
list02/doc/: list2.tex
list02/src/: list2.cpp  tree-2023-recursive.cc
list03/: CMakeLists.txt
list03/doc/: list3.tex
list03/src/: linear_sorting.cc  list3.cpp
list04/: CMakeLists.txt
list04/doc/: list4.tex
list04/src/: list4.cpp
list05/: CMakeLists.txt
list05/doc/: list5.tex
list05/src/: list5.cpp
list06/: CMakeLists.txt
list06/src/: list6.cpp
list08/: list8.tex
list09/: CMakeLists.txt
list09/src/: progdyn1.cc
list1/: CMakeLists.txt  Cargo.toml
list1/doc/: list1.tex
list1/src/: lib.rs  list1.cpp  main.cpp
list10/: CMakeLists.txt
list10/doc/: list10.tex
list10/src/: list10.cpp
list11/: list11.tex
list2/: CMakeLists.txt
list2/doc/: list2.tex
list2/src/: list2.cpp  tree-2023-recursive.cc
list3/: CMakeLists.txt
list3/doc/: list3.tex
list3/src/: list3.cpp
list4/: CMakeLists.txt
list4/doc/: list4.tex
list4/src/: list4.cpp
list5/: CMakeLists.txt
list5/doc/: list5.tex
list5/src/: list5.cpp
list6/doc/: list6.tex
list7/doc/: list7.tex
list7/src/: list7.cpp
list8/: list8.tex
list8/doc/: list8.tex
list9/doc/: list9.tex
list9/src/: list9.cpp  progdyn1.cc  progdyn2.cc
recap1/doc/: recap1.tex
recap1/src/: sorty2023.cc
recap2/: recap2.tex
recap2/doc/: recap2.tex
recap3/: recap3.tex
